[package]
name = "kitbash-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
open = "5"
